<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="view.MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="40sp"
        android:textColor="#fff"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_title"
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/quick_desc" />

    <TextView
        android:id="@+id/percent_loaded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_loading"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/progress_bar"
        />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        />

</RelativeLayout>

